Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107459

Qt produces warnings when QT_PLUGIN_PATH contains different major versions

XMLWordPrintable

    • Linux/X11
    • 25e13c907 (dev), db0169bcd (6.5)

      Hi,

      Since packaging Qt6 on the Guix System GNU/Linux distribution, we've had to review our usage of QT_PLUGIN_PATH to discover QML plugins, because Qt6 would print warnings when loading Qt5 plugins, and I was told in the #qt IRC LiberaChat channel that they should'n't be mixed, else it could cause problems.

      This means that each application must now be wrapped with the exact value of QT_PLUGIN_PATH, which defeats the dynamic aspect that plugins are supposed to achieve.

      Could QT_PLUGIN_PATH be made to support more than one version? The Qt plugin installation prefixes are already versioned, so it should be possible to differentiate them by this means. or there could be a QT5_PLUGIN_PATH and a QT6_PLUGIN_PATH, etc.

      Thank you!

        For Gerrit Dashboard: QTBUG-107459
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            apteryx Maxim Cournoyer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes